[package]
name = "rp2040-blinking-led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = { version="0.7.3"}
critical-section = "1.1.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.8.0"
rp2040-pac = "0.4.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[[bin]]
name = "usbled"
path = "src/usbled.rs"

[[bin]]
name = "boilerplate"
path = "src/boilerplate.rs"


[features]
# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["rp2040-pac/rt"]
critical-section-impl = ["critical-section/restore-state-bool"]
rom-func-cache = []
disable-intrinsics = []
rom-v2-intrinsics = []
rp2040-e5 = []
